samples/_failures_safe/1761256516_2a9365_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b1889a0.c: In function ‘print_stats’:
./samples/SAFE/__tmp_4b1889a0.c:136:5: error: expected identifier at end of input
  136 |     printf("Warnings: %d\n", stats->
      |     ^~~~~~
./samples/SAFE/__tmp_4b1889a0.c:136:5: error: expected declaration or statement at end of input
